# traitlet_widgets

./: README.md  pyproject.toml  traitlet_widgets.py
traitlet_widgets/: __init__.py  factories.py  factory.py  filters.py  observer.py  traits.py  types.py  view.py  view_factories.py  widgets.py
