[tool.poetry]
name = "traitlet_widgets"
version = "5.0.0"
description = "A library which provides the ability to create widget views for traitlet `HasTraits` models, and also to observe changes in a model"
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"
repository = "https://github.com/agoose77/traitlet_widgets"
keywords = ["traitlets", "ui", "widgets", "jupyter", "mvc"]

[tool.poetry.dependencies]
python = "^3.7"
traitlets = "^5.0.4"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
