[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "traitlets<6.0.0,>=5.0.4",
    "ipywidgets<8.0.0,>=7.5.1",
]
name = "traitlet_widgets"
version = "5.5.0"
description = "A library which provides the ability to create widget views for traitlet `HasTraits` models, and also to observe changes in a model"
keywords = ["traitlets", "ui", "widgets", "jupyter", "mvc"]

[project.urls]
repository = "https://github.com/agoose77/traitlet_widgets"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
